fixed link color, now readable

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -2,7 +2,8 @@
 
 :root {
     --md-primary-fg-color:        #3d3d3d;
-    --md-primary-fg-color--light: #3d3d3d;
+    /*--md-primary-fg-color--light: #3d3d3d;*/
+    --md-primary-fg-color--light: rgb(123, 136, 204);
     --md-primary-fg-color--dark:  #3d3d3d;
 
     --md-accent-fg-color: #f8485e;
